--- a/I4G014055JZT/blog/templates/blog/post_confirm_delete.html
+++ b/I4G014055JZT/blog/templates/blog/post_confirm_delete.html
@@ -1,60 +1,23 @@
-<!DOCTYPE HTML>
-<html lang="en">
-
-<head>
-
-<!-- Required meta tags -->
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-
-<!-- Bootstrap CSS -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-
-{% block title %}
-    {% if title %}
-        <title>{{title}} | My Blog ✏</title> 
-    {% else %}
-        <title>My Blog Posts 📝</title>
-    {% endif %}
-{% endblock title %}
-
-{% block head %}
-{% endblock head %}
-    
-</head>
-
-<body>
-
-<div class="container-fluid">
-    
-    <!-- NAVIGATION BAR -->
-
-
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="d-flex justify-content-between px-5 mx-auto" style="width: 80%;">
-            <span class="navbar-text text-white">DJANGO C.R.U.D.</span>
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link active" href="{% url 'blog:all' %}">Posts</a>
-                </li>
-                <li class="nav-item active">
-                    <a class="nav-link active" href="https://zuri.team/" target="_blank">Checkout Zuri</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
-
-    <!-- END OF NAVIGATION BAR -->
-
-</div>
+{% extends "base.html" %}
 
 {% block content %}
-{% endblock content %}
 
+{% url 'blog:all' as list_all %}
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+<div class="container d-flex justify-content-center mt-5" style="width: 50%;">
+    <div class="col mt-5 text-center">
+        <h1 class="mb-5">Delete Film</h1>
 
-</body>
+        <p class="h5">Are you sure you want to delete the Post:</p>
+        <h3 class="my-5">{{ object.title }}</h3>
+        <form action="" method="POST">
+            {% csrf_token %}
+            {% comment %} <input type="submit" value="Confirm">
+            <input type="submit" value="Cancel" onclick="window.location='{% url 'blog:all' %}'; return false;"> {% endcomment %}
+            <input type="submit" class="btn btn-primary btn-lg" value="Confirm" style="margin-right: 30px; margin-top: 30px;">
+            <input type="submit" class="btn btn-danger btn-lg" style="margin-top: 30px;" onclick="window.location='{{list_all}}'; return false;" value="Cancel">
+        </form>
+    </div>
+</div>
 
-</html>
+{% endblock %}
